mockup/css/style.css
/* ... */
.navigation:hover {
  color: rgb(53,55,128);

  transition-property: all;
  transition-duration: .5s;
  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
}
.navigation--pre {
  left: 0;
  float: left;
}
.navigation--next {
  right: 0;
  float: right;
}
@media screen and (min-width: 1200px){
  .navigation {
    position: fixed;
    top: 40vh;
    width: 100px;
  }
}
.about_item_content a:hover, .topic_item:hover {
  cursor: pointer;
  background: #eee;
}
.about_item_content li {
    line-height: 175%;
}
.prompt {
    font-weight: 500;
}
.tutorial img, .about_item_content img {
    max-width: 95%;
    margin-left: 10px;
    margin-right: 10px;
    border: 3px solid #999;
    border-radius: 5px;
}
/* Proposal Items */
.Proposal {
  background: white;
  margin: 5px;
  cursor: pointer;
  color: rgb(53,55,54);
}
.Proposal:hover .Proposal-title {
  color: rgb(63,159,155);
  font-weight: 900;
}
/*@media screen and (min-width: 600px){
  .Proposal {
      width: 48%;
      vertical-align: top;
      display: inline-block;
  }
}*/
.Proposal-mainText {
  padding: 10px 10px 5px 10px;
}
.Proposal-header {
  border-bottom: 1px solid rgb(220,220,220);
  position: relative;
}
.Proposal-title {
  font-size: 20px;
  font-weight: 900;
  padding-bottom: 5px;
  display: inline-block;
  vertical-align: top;
  
}
@media screen and (min-width: 400px){
  .Proposal-title {
    font-size: 22px;
  }
}

.Proposal-content a:hover{
  cursor: pointer;
  background: #eee;
}
.Proposal-content li {
  line-height: 175%;
}
.Proposal-proposer {
  display: inline-block;
  position: relative;
  padding-bottom: 10px;
}
.Proposal-proposerImg {
  width: 45px;
  height: 45px;
  padding-top: 3px;
  display: inline-block;
  padding-right: 3px;
}
.Proposal-proposerName::first-letter {
  font-weight: 100;
}
.Proposal-proposerName {
  font-size: 12px;
  color: rgb(100,100,100);
  font-weight: bold;
  text-transform: uppercase;
}
.Proposal-proposerName a, .Proposal-proposerName a:visited{
  color: rgb(80,80,80);
}
.Proposal-proposerName a:hover{
  text-decoration: underline;
}
.ProgressBar {
  width: 100%;
  padding: 10px;
  padding-left: 14px;
}

.ProgressBar-stepTitle-tab {
  display: inline-block;
  width: 70px;
  padding: 3px;
  padding-left: 10px;
  text-align: center;
  position: relative;
  margin-right: 14px;
  height: 30px;
}
.ProgressBar-triangleRight:before{
  content: '';
  position: absolute;
  right: -30px;
  top: -1px;
  height: 0;
  border-color: transparent transparent transparent gray;
  border-style: solid;
  border-width: 15px;
}
.ProgressBar-triangleRight-inactive:before{
  content: '';
  position: absolute;
  right: -30px;
  top: -1px;
  height: 0;
  border-color: transparent transparent transparent rgb(220,220,220);
  border-style: solid;
  border-width: 15px;
}
.ProgressBar-triangleRight:after,.ProgressBar-triangleRight-inactive:after {
  content: '';
  position: absolute;
  right: -28px;
  top: 0px;
  width: 0;
  height: 0;
  border-color: transparent transparent transparent white;
  border-style: solid;
  border-width: 14px;
}

.ProgressBar-stepTitle-tab:hover {
  background: rgb(255,255,153);
}
.ProgressBar-stepTitle-tab:hover .ProgressBar-triangleRight:after,
.ProgressBar-stepTitle-tab:hover .ProgressBar-triangleRight-inactive:after {
  border-color: transparent transparent transparent rgb(255,255,153);
}
.ProgressBar-stepTitle-tab:hover.is-inactive {
  color: rgb(53,55,54);
  font-weight: 800;
}

.ProgressBar-stepTitle-tab.is-active {
  font-weight: 800;
  border: 1px solid rgb(180,180,180);
}
.ProgressBar-stepTitle-tab.is-inactive {
  border: 1px solid rgb(230,230,230);
  color: rgb(220,220,220);
}
.ProgressBar-stepInfo {

}
.ProgressBar-barBackground {
  margin: 12px 0px 24px 0px;
  position: relative;
  background: rgb(230,230,230);
}
.ProgressBar-barProgress {
  background: rgb(63,159,155);
  height: 8px;
}

.ProgressBar-startDate {
  position: absolute;
  bottom: -24px;
  font-size: 14px;
  left: 0px;
  font-weight: 700;
  display: inline-block;
  font-family: Lucida Console, Monaco, monospace;
}
.ProgressBar-endDate {
  display: inline-block;
  position: absolute;
  bottom: -24px;
  font-size: 14px;
  right: 0px;
  font-weight: 700;
  display: inline-block;
  font-family: Lucida Console, Monaco, monospace;
}
.ProgressBar-stat {
  display: inline-block;
  width: 30%;
  padding: 25px 0px;
  text-align: center;
}
.ProgressBar-statHighlight {
  font-size: 20px;
  font-weight: 800;
}
.ProgressBar-infoTitle {
  margin-top: 40px;
  font-weight: 800;
}
.ProgressBAr-infoContent {
  min-height: 90px;
}
.nav_item_sidebar--sub .Proposal-proposerImg {
  background: white;
  border-radius: 10px;
  width: 36px;
  height: 36px;
  margin-right: 10px;
  vertical-align: middle;
  margin-top: -10px;
  margin-bottom: -10px;
  margin-left: -10px;
  border: 3px solid white;
  padding: 0;
}

